@@ -1,6 +1,6 @@
 /*
  * Main include-file for CLISP
- * Bruno Haible 1990-2011, 2016-2017
+ * Bruno Haible 1990-2011, 2016-2018
  * Marcus Daniels 11.11.1994
  * Sam Steingold 1998-2012, 2016-2017
  * Vladimir Tzankov 2008-2012, 2017
@@ -2567,15 +2567,14 @@ typedef enum {
   #if defined(UNIX_LINUX) && defined(AMD64)
     /* On Linux/x86_64:
        MMAP_FIXED_ADDRESS_HIGHEST_BIT = 46
-       CODE_ADDRESS_RANGE   = 0x0000000000000000UL
-       MALLOC_ADDRESS_RANGE = 0x000000000x000000UL
+       CODE_ADDRESS_RANGE   = 0x0000000000000000UL or 0x0000562A92000000 (in Linux 4.13)
+       MALLOC_ADDRESS_RANGE = 0x000000000x000000UL or 0x000055EEF5000000 (in Linux 4.13)
        SHLIB_ADDRESS_RANGE  = 0x00000034F5000000UL or 0x0000003844000000UL or 0x00007Fxxxx000000UL
                               or 0x0000002Axx000000UL or 0x0000002Bxx000000UL (in Linux 3.2, when invoked by 'make')
-       STACK_ADDRESS_RANGE  = 0x0000007FBF000000UL or 0x00007FFEBF000000UL
-       There is room from 0x010000000000UL to 0x2A0000000000UL
-       and           from 0x400000000000UL to 0x7E0000000000UL. */
-    #define MAPPABLE_ADDRESS_RANGE_START 0x400000000000UL
-    #define MAPPABLE_ADDRESS_RANGE_END   0x7DFFFFFFFFFFUL
+       STACK_ADDRESS_RANGE  = 0x0000007FBF000000UL or 0x00007FFEBF000000UL or 0x00007FFDxx000000 (in Linux 4.13)
+       There is room from 0x004000000000UL to 0x2A0000000000UL. */
+    #define MAPPABLE_ADDRESS_RANGE_START 0x004000000000UL
+    #define MAPPABLE_ADDRESS_RANGE_END   0x2AFFFFFFFFFFUL
   #endif
   #if defined(UNIX_LINUX) && defined(ARM64)
     /* On Linux/arm64:
@@ -3369,8 +3368,8 @@ Long-Float, Ratio and Complex (only if SPVW_MIXED).
   /* 64-bit platforms */
   #if defined(UNIX_LINUX) && defined(AMD64) /* Linux/x86_64 */
     #define SINGLEMAP_ADDRESS_BASE 0UL
-    #define SINGLEMAP_TYPE_MASK    0x5F0000000000UL
-    #define SINGLEMAP_oint_type_shift 40
+    #define SINGLEMAP_TYPE_MASK    0x1F8000000000UL
+    #define SINGLEMAP_oint_type_shift 39
     /* This configuration allocates memory outside the MAPPABLE_ADDRESS_RANGE. */
     #define IGNORE_MAPPABLE_ADDRESS_RANGE
     #define SINGLEMAP_WORKS 1
